2005-03-06  Danilo Šegan  <dsegan@gmx.net>

	* rni18n.xml: Comment unused paragraphs out.
	Update language count to 33.

2005-03-06  Murray Cumming  <murrayc@murrayc.com>

	* press_release/gnome210_press_release.[sxw|wml]: Corrected spelling 
	of Sao Paulo and added missing of in quote from Luis.

2005-03-06  Murray Cumming  <murrayc@murrayc.com>

	* rnapplets.xml: Fix link to mailnotify - we should use ulink url 
	instead of link href.

2005-03-06  Simos Xenitellis  <simos@gnome.org>

	* README_screenshots.txt: Added links to flash animation tutorial.

2004-03-05  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-file-roller.png: Added missing figure.
	* rnutilities: Fix image link.

2005-03-03  Frank Arnold  <farnold@cvs.gnome.org>

	* rnsysadmin.xml: Fixed a typo.

2005-03-03  Murray Cumming  <murrayc@murrayc.com>

	* release-notes.xml: Fix the caption of the desktop screenshot - 
	it was copy/pasted from the control center.

2005-03-03  Murray Cumming  <murrayc@murrayc.com>

	* rncontrolcenter.xml: Fixed a typo. Sorry translators.

2005-03-03  Davyd Madeley  <davyd@madeley.id.au>

	* rnapplets.xml:
	* rnapplications.xml:
	* rnutilities.xml: Linked to new images. Some strings changed where
	the were obviously the wrong thing (due to cutting and pasting I
	imagine), this really couldn't be helped.
	
	* figures/figure-applet-cpufreq.png:
	* figures/figure-dictionary.png:
	* figures/figure-floppy-formatter.png:
	* figures/figure-gedit.png:
	* figures/figure-gnome-meeting.png: Added more images. Only one or two
	missing now.


2005-03-02  Murray Cumming  <murrayc@murrayc.com>

	* release-notes.xml: Add rnutilities.xml. I probably forgot to 
	do this before. Screenshots need to be done.
	* release-notes.xml: Remove TODO on known issues - it is too late now.
	* rnapplications.xml: Made the FIXME an xml comment instead of making 
	it part of a translatable string.

2005-03-02  Murray Cumming  <murrayc@murrayc.com>
