@@ -12,6 +12,7 @@
 
     <para>Selecting a keyboard layout is now simpler with the Keyboard control panel. Just click Add to choose from a list 
 of international keyboard layouts. Before making your choice you can see the effect of key presses in the layout preview. The Layout Options section has also been reorganized as a simpler list of choices.
+    </para>
 
     <figure id="rnscreenshot-controlpanel-keyboardlayouts">
       <title>Keyboard Preferences - Layouts</title>
@@ -23,7 +24,6 @@ of international keyboard layouts. Before making your choice you can see the eff
         </mediaobject>
       </screenshot>
     </figure>
-    </para>
 
   </sect3>
 
